--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Wei Zhang</div>
+<div class="menu-category">Jianbo Liu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="biography.html">Biography</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
@@ -26,19 +26,19 @@
 <table class="imgtable"><tr>
 <td>
 <a href="IMG_1641.jpg"><img src="IMG_1641.jpg" alt="picture" width="160px" height="230px" onclick="return false"/></a>
-<br /><div class="text" style=" text-align:center;">[<a href="cv/Wei_Zhang_EN.pdf"><font face="Times New Roman"
+<br /><div class="text" style=" text-align:center;">[<a href="cv/Jianbo_Liu.pdf"><font face="Times New Roman"
              size="4">CV</font></a>] &nbsp;
             [<a href="https://faculty.ecnu.edu.cn/_s16/zw2_6443/main.psp" target="_blank"><font face="微软雅黑" size="4">中文简介</font></a>]  
   </div>
 </td>
 <td align="left"><p>
-Wei Zhang, Ph.D., Professor<br />
+Jianbo Liu, Ph.D., Professor<br />
 <!--<a href="http://aida.ecnu.edu.cn">Advanced Insititute of Data Analytics</a> (AIDA)<br />-->
 <!--Department of Data Science and Engineering (DDSE)<br />-->
 School of Computer Science and Technology<br />
 <a href="http://www.ecnu.edu.cn">East China Normal University</a> (ECNU)<br />
 Address: <i>B903, Science Building, East China Normal University,</i> <br /><i>No.3663, North Zhongshan Road, 200062 Shanghai, P.R. China</i><br />
-Email: <u>zhangwei.thu2011@gmail.com</u>
+Email: <u>2831055963az@gmail.com</u>
 </p>
 </td>
 <td valign="top" scope="col">
