--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 </td>
 <td align="left"><p>
-Jianbo Liu, Ph.D., Professor<br />
+Jianbo Liu, Junior year, Undergraduate<br />
 <!--<a href="http://aida.ecnu.edu.cn">Advanced Insititute of Data Analytics</a> (AIDA)<br />-->
 <!--Department of Data Science and Engineering (DDSE)<br />-->
 School of Computer Science and Technology<br />
